[tool.poetry]
name = "amazing-hinting"
version = "0.1.0"
description = ""
authors = ["yury-yury <yury_yury@mail.ru>"]
readme = "README.md"
packages = [{include = "amazing_hinting"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
